Fixed up the login messages for the login event which somehow got lost, making it a bit ugly when the USERNAME and/or PASSWORD are not passed in
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@6084 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/securityext/config/SecurityextUiLabels.properties
+++ b/applications/securityext/config/SecurityextUiLabels.properties
@@ -32,22 +32,23 @@ CommonWelcome=Welcome
 
 loginevents.user_already_logged_in=This user is already logged in.
 # ${errorMessage} = Error Description
-loginevents.following_error_occurred_during_login=<b>The following error occurred during login:</b><br>${errorMessage}
-loginevents.unable_to_login_this_application=<b>Login for this application couldn't be completed (not enough permissions).</b><br>
+loginevents.following_error_occurred_during_login=The following error occurred during login: ${errorMessage}
+loginevents.unable_to_login_this_application=Login for this application couldn't be completed (required permissions missing).
 loginevents.username_was_empty_reenter=The Username was empty, please re-enter.
+loginevents.password_was_empty_reenter=The Password was empty, please re-enter.
 loginevents.username_not_found_reenter=The Username was not found, please re-enter.
 loginevents.no_password_hint_specified_try_password_emailed=No password hint was specified, try having the password emailed instead.
 # ${passwordHint} = Hint for specifying given password
 loginevents.password_hint_is=The Password Hint is: ${passwordHint}.
 # ${errorMessage} = Error Description
-loginevents.error_accessing_password=<li>Error accessing password: ${errorMessage}.
-loginevents.user_with_the_username_not_found=<li>A user with the username "${userLoginId}" was not found, please re-enter.
-loginevents.no_primary_email_address_set_contact_customer_service=<li>No Primary Email Address has been set, please contact customer service.
-loginevents.problems_with_configuration_contact_customer_service=<li>Problems with configuration; please contact customer service.
+loginevents.error_accessing_password=Error accessing password: ${errorMessage}.
+loginevents.user_with_the_username_not_found=A user with the username "${userLoginId}" was not found, please re-enter.
+loginevents.no_primary_email_address_set_contact_customer_service=No Primary Email Address has been set, please contact customer service.
+loginevents.problems_with_configuration_contact_customer_service=Problems with configuration; please contact customer service.
 # ${errorMessage} = Error Description
 loginevents.error_unable_email_password_contact_customer_service_errorwas=Error occurred: unable to email password.  Please try again later or contact customer service. (error was: ${errorMessage}).
 loginevents.error_unable_email_password_contact_customer_service=Error occurred: unable to email password.  Please try again later or contact customer service.
-loginevents.error_saving_new_password_email_not_correct_password=<li>Error saving new password, the email that you receive will not have the correct password in it, your old password is still being used: ${errorMessage}.
+loginevents.error_saving_new_password_email_not_correct_password=Error saving new password, the email that you receive will not have the correct password in it, your old password is still being used: ${errorMessage}.
 loginevents.new_password_createdandsent_check_email=A new password has been created and sent to you. Please check your Email.
 loginevents.new_password_sent_check_email=Your password has been sent to you. Please check your Email.
 
