added a few missing labels; few additional fields for integrations
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@6088 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels.properties
+++ b/applications/order/config/OrderUiLabels.properties
@@ -84,6 +84,7 @@ OrderInvoices = Invoices
 OrderIsThisGift = Is This a Gift?
 OrderIssuedToShipmentItem = Issued to Shipment Item
 OrderItemTotal = Item Total
+OrderItemsBackOrdered = Items Backordered
 OrderItemsOrdered = Items Ordered
 OrderItemsReturned = Items Returned
 OrderItemsSubTotal = Items SubTotal
@@ -127,7 +128,7 @@ OrderOrderBillFromParty = Bill From Party
 OrderOrderBillToParty = Bill To Party
 OrderOrderConfirmation = Order Confirmation
 OrderOrderDate = Order Date
-OrderOrdered=Ordered
+OrderOrdered = Ordered
 OrderOrderEntry = Order Entry
 OrderOrderEntryCustomerInfo = Order Entry Customer Info
 OrderOrderEntryOrderTerms = Order Entry Order Terms
@@ -189,7 +190,6 @@ OrderOrderTermValue = Term Value
 OrderOrderTerms = Order Terms
 OrderOrderTotal = Order Total
 OrderOrderType = Order Type
-OrderOrdered = Ordered
 OrderOriginFacility = Origin Facility
 OrderOverridePrice=Override Price
 OrderPONumber = PO Number
@@ -373,5 +373,5 @@ shoppinglistevents.shoppingListId_is_required_parameter = shoppingListId is a re
 OrderSendConfirmationEmail=Send a confirmation email
 OrderSendConfirmationEmailSendTo=Send To
 OrderSendConfirmationEmailCCTo=CC To
-OrderSendConfirmationEmailSubject=Subject 
+OrderSendConfirmationEmailSubject=Subject
 OrderSendConfirmationEmailNote=Note
