--- a/framework/common/config/CommonUiLabels.properties
+++ b/framework/common/config/CommonUiLabels.properties
@@ -110,6 +110,7 @@ CommonCreateNew=Create New
 CommonCreated=Created
 CommonCreatedBy=Created By
 CommonCredit=Credit
+CommonCurrency=Currency
 CommonCurrent=Current
 CommonDatabaseProblem=Database Problem
 CommonDate=Date
