More proposed arithmetic properties and commentary
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@6138 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/accounting/config/arithmetic.properties
+++ b/applications/accounting/config/arithmetic.properties
@@ -1,2 +1,17 @@
+#
+# Arithmetic properties for configuring BigDecimal calculations  
+#
+
+# For setting decimal precision and rounding method of operations related to invoices
 invoice.decimals = 2
 invoice.rounding = ROUND_HALF_UP
+
+# For setting decimal precision and rounding method of operations related to orders,
+# such as shopping cart amounts and order amounts
+order.decimals = 2
+order.rounding = ROUND_HALF_UP
+
+# For setting decimal precision and rounding method of operations related to customer accounts
+# such as Financial Accounts
+finaccount.decimals = 2
+finaccount.rounding = ROUND_HALF_UP
