Added new sales tax rounding, for future calculations using BigDecimal
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@6139 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/accounting/config/arithmetic.properties
+++ b/applications/accounting/config/arithmetic.properties
@@ -15,3 +15,10 @@ order.rounding = ROUND_HALF_UP
 # such as Financial Accounts
 finaccount.decimals = 2
 finaccount.rounding = ROUND_HALF_UP
+
+# Most companies would want their sales tax calculations ALWAYS to round up (ie, 100.081 becomes 100.09)
+# This could be ROUND_CEILING or ROUND_UP.  (The difference is that ROUND_CEILING rounds towards positive infinity,
+# ROUND_UP away from zero.  So, for 1.13, both ROUND_UP and ROUND_CEILING will round to 1.2, but for -1.13,
+# ROUND_UP gives you -1.2 and ROUND_CEILING -1.1.)
+salestax.decimals = 2
+salestax.rounding = ROUND_CEILING 
