New screen for doing a search of product inventory items by criteria such as manufacturerPartyId (first draft)
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@6160 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/product/config/ProductUiLabels.properties
+++ b/applications/product/config/ProductUiLabels.properties
@@ -123,6 +123,7 @@ PageTitlePickListOptions=Pick List Options
 PageTitlePickingMoveStock=Picking : Move Stock
 PageTitlePickingViewStartedPicks=Picking : View Started Picks
 PageTitleQuickAddProductVariants=Quick Add Product Variants
+PageTitleSearchInventoryItems=Search Inventory Items
 PageTitleTransferInventoryItem=Transfer Inventory Item
 PageTitleViewFacilityContactMechanism=View Facility Contact Mechanism
 PageTitleViewShipment=View Shipment
