Added new tab screen to product's screens to manage information about product's cost.
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@6173 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/product/config/ProductUiLabels.properties
+++ b/applications/product/config/ProductUiLabels.properties
@@ -322,6 +322,7 @@ ProductContentInfoText=Content Info Text
 ProductContentPathPrefix=Content Path Prefix
 ProductContent_Id=Content [ID]
 ProductCopyProductCategoryMembersToAnotherCategory=Copy Product Category Members to Another Category
+ProductCosts=Costs
 ProductCouldNotFindFacilityWithId=Could Not Find Facility with ID
 ProductCouldNotFindProduct=Could Not Find Product with ID
 ProductCouldNotFindProductCategoryWithId=Could not Find Product Category with Id
