--- a/applications/accounting/config/arithmetic.properties
+++ b/applications/accounting/config/arithmetic.properties
@@ -20,5 +20,6 @@ finaccount.rounding = ROUND_HALF_UP
 # This could be ROUND_CEILING or ROUND_UP.  (The difference is that ROUND_CEILING rounds towards positive infinity,
 # ROUND_UP away from zero.  So, for 1.13, both ROUND_UP and ROUND_CEILING will round to 1.2, but for -1.13,
 # ROUND_UP gives you -1.2 and ROUND_CEILING -1.1.)
-salestax.decimals = 2
-salestax.rounding = ROUND_CEILING 
+salestax.calc.decimals = 3
+salestax.final.decimals = 2
+salestax.rounding = ROUND_CEILING
