--- a/applications/party/config/PartyUiLabels.properties
+++ b/applications/party/config/PartyUiLabels.properties
@@ -57,7 +57,7 @@ PageTitleEditPartyClassificationGroup=Edit Party Classification Group
 PageTitleEditPartyClassificationGroupParties=Edit Classification Group Parties
 PageTitleEditPartyRates=Edit Party Rates
 PageTitleEditPartyRelationships=Edit Party Relationships
-PageTitleEditPartyTaxInfos=Edit Party Tax Info
+PageTitleEditPartyTaxAuthInfos=Edit Party Tax Authority Info
 PageTitleEditPersonalInformation=Edit Personal Information
 PageTitleEditSecurityGroup=Edit Security Group
 PageTitleEditSecurityGroupPermissions=Edit Security Group Permissions
@@ -366,7 +366,7 @@ PartyStillActive=Still Active
 PartySubject=Subject
 PartySuffix=Suffix
 PartySupplier=Supplier
-PartyTaxInfos=Tax Infos
+PartyTaxAuthInfos=Tax Infos
 PartyTelecom=Telecom
 PartyTerm=Term
 PartyTermTyp=Term Type
