New feature to schedule all PACKED shipments of a warehouse en masse and bring up a screen to print all the labels.  Label printing not implemented yet.  Introduced a default weight uom for a facility's packages
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@6216 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/product/config/ProductUiLabels.properties
+++ b/applications/product/config/ProductUiLabels.properties
@@ -535,6 +535,8 @@ ProductItemsIssuedReserved=Items Issued or Reserved
 ProductKeyword=Keyword
 ProductKeywordRelevency=Keyword Relevency
 ProductKeywords=Keywords
+ProductLabel=Label
+ProductLabels=Labels
 ProductLargeImage=Large Image
 ProductLastModifiedBy=Last Modified By
 ProductLastModifiedByUserLogin=Last Modified By User Login
@@ -863,6 +865,8 @@ ProductSaleRule=Sale Rule
 ProductSalesDiscontinuationNotAvailable=Disc. When Inv. Not Avail?
 ProductSalesTax=Sales Tax
 ProductSalesThruDate=Sales  discontinuation Thru Date
+ProductSchedule=Schedule
+ProductScheduling=Scheduling
 ProductSearchCatalog=Search Catalog
 ProductSearchProducts=Search Products
 ProductSearchinCategory=Search in Category
