Changed Facility.defaultUomId to Facility.defaultWeightUomId for better clarity and so we can have other uomId's in the future
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@6226 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/product/config/ProductUiLabels.properties
+++ b/applications/product/config/ProductUiLabels.properties
@@ -439,6 +439,7 @@ ProductFacilityRoleMemberMaintenance=Facility Role Member Maintenance
 ProductFacilityType=Facility Type
 ProductFacilityTypeId=Facility Type ID
 ProductFacilityViewPermissionError=You do not have permission to view this page. ("FACILITY_VIEW" or "FACILITY_ADMIN" needed)
+ProductFacilityDefaultWeightUnit=Default Weight Unit 
 ProductFastLoadCatalogIntoCache=Fast Load Catalog into Cache
 ProductFeatureApplicationType=Feature Application Type
 ProductFeatureAppls=Feature Appls
