A few misc cleanups.
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@6243 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/manufacturing/config/ManufacturingUiLabels.properties
+++ b/applications/manufacturing/config/ManufacturingUiLabels.properties
@@ -136,7 +136,7 @@ ManufacturingRoutingTaskCopiedSuccessfully=Routing Task copied Successfully
 ManufacturingRoutingTaskId=Routing Task Id
 ManufacturingRoutingTaskToMissing=Routing Task To is Missing
 ManufacturingRunMrp=Run MRP
-ManufacturingScrapFactor=Scrap Factor
+ManufacturingScrapFactor=Scrap Factor %
 ManufacturingStartDate=Start Date
 ManufacturingStartTime=Start Time
 ManufacturingSummarizedPartBreakdown=Summarized Breakdown
