addded new search options for orders; added additional fields to order header display
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@6245 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels.properties
+++ b/applications/order/config/OrderUiLabels.properties
@@ -66,6 +66,7 @@ OrderDestination = Destination
 OrderEditItems = Edit Items
 OrderEntryDate = Entry Date
 OrderErrorFacilityHaveNoAdress=Error : the facility does not have addresses
+OrderExternalId = External ID
 OrderFinalizeOrder = Finalize Order
 OrderFindOrder = Find Orders
 OrderFindReturn = Find Returns
@@ -78,6 +79,7 @@ OrderGrossItemsSoldIncludesPromotionsAndPendingOrders=Gross Items Sold (includes
 OrderImage = Image
 OrderInProgress = In Progress
 OrderInputQuickPurchaseOrder=Purchase Order Quick Entry
+OrderInternalCode = Internal Code
 OrderInternalNote = Internal Note
 OrderInternalNoteMessage = If yes is selected, this note doesn't appear on the print documents
 OrderInvoices = Invoices
@@ -191,6 +193,7 @@ OrderOrderTerms = Order Terms
 OrderOrderTotal = Order Total
 OrderOrderType = Order Type
 OrderOriginFacility = Origin Facility
+OrderOtherOrders = Other Orders
 OrderOverridePrice=Override Price
 OrderPONumber = PO Number
 OrderPaidDollarAmountsIncludesAdjustments=Paid Dollar Amounts (includes adjustments)
