added label for channel
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@6246 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/framework/common/config/CommonUiLabels.properties
+++ b/framework/common/config/CommonUiLabels.properties
@@ -51,6 +51,7 @@ CommonAnyOrderStatus=Any Order Status
 CommonAnyOrderType=Any Order Type
 CommonAnyReturnStatus=Any return status
 CommonAnyRoleType=Any Role Type
+CommonAnySalesChannel=Any Channel
 CommonAnyStore=Any Store
 CommonAnyWebSite=Any Web Site
 CommonApply=Apply
