fixed bad entity relationship name; fixed returns now always must be SERIALIZABLE if inventory is not going to be available (defective, hold, etc); now will loop and create a serialized inventory item for each quantity in the return; bug when using quick return and serialized inventory; implemented code to re-activate a product when inventory comes back in; configurable
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@6249 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/product/config/catalog.properties
+++ b/applications/product/config/catalog.properties
@@ -12,3 +12,7 @@ image.filename.format=${location}/${type}/${id}
 # -- Which default top category to display... --
 top.category.default=CATALOG1
 all.product.category=CATALOG1
+
+# Flag to re-active products when they are received
+reactivate.product.from.receipt=Y
+
