Only formatting changes (mostly tabs to spaces). Also added a few labels.
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@6274 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/workeffort/config/WorkEffortUiLabels.properties
+++ b/applications/workeffort/config/WorkEffortUiLabels.properties
@@ -117,8 +117,9 @@ WorkEffortAllTasks=All Tasks
 WorkEffortApplicationEventsTasksWorkflowActivities=This application is meant for those who maintain and use calendar events tasks and workflow activities
 WorkEffortAssignedTasks=Assigned Tasks
 WorkEffortAttender=Attender
-WorkEffortByFacility=by Facility
-WorkEffortByPartyId=ByPartyId
+WorkEffortByFacility=By Facility
+WorkEffortByFixedAsset=By Fixed Asset
+WorkEffortByPartyId=By Party
 WorkEffortCalendar=Calendar
 WorkEffortCalendarDayView=Calendar Day View
 WorkEffortCalendarEntries=Calendar Entries
