A new service sendCommEventAsEmail, which is triggered asynchronously when a comm event's status is marked as COM_IN_PROGRESS (seca) and sends the comm event as an email using sendMail.  Next up: sending emails to a contact list
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@6280 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/party/config/PartyUiLabels.properties
+++ b/applications/party/config/PartyUiLabels.properties
@@ -15,6 +15,9 @@ AccountingPinNumber=Pin Number
 AccountingPaymentsReceived=Payments Received
 AccountingPaymentsSent=Payments Sent
 
+commeventservices.communication_event_not_found_failure=ERROR: Communication Event not found for communication event Id
+commeventservices.communication_event_must_be_email_for_email=ERROR: Communication event is not an email communication and cannot be emailed for communication event Id 
+
 contactmechservices.could_not_create_contact_info_id_generation_failure=ERROR: Could not create contact info (id generation failure).
 contactmechservices.service_createContactMech_not_be_used_for_POSTAL_ADDRESS=This service (createContactMech) should not be used for POSTAL_ADDRESS type ContactMechs, use the createPostalAddress service.
 contactmechservices.service_createContactMech_not_be_used_for_TELECOM_NUMBER=This service (createContactMech) should not be used for TELECOM_NUMBER type ContactMechs, use the createTelecomNumber service.
@@ -203,6 +206,8 @@ PartyFindParty=Find Party
 PartyFirstName=First Name
 PartyFirstNameMissing=Firstname is Missing
 PartyFollowSession=Follow Session
+PartyFromContactMech=From Contact Mech
+PartyToContactMech=To Contact Mech
 PartyGender=Gender
 PartyGotoList=Goto List
 PartyGroupName=Group Name
