--- a/applications/party/config/PartyUiLabels.properties
+++ b/applications/party/config/PartyUiLabels.properties
@@ -17,6 +17,8 @@ AccountingPaymentsSent=Payments Sent
 
 commeventservices.communication_event_not_found_failure=ERROR: Communication Event not found for communication event Id
 commeventservices.communication_event_must_be_email_for_email=ERROR: Communication event is not an email communication and cannot be emailed for communication event Id 
+commeventservices.communication_event_from_contact_mech_must_be_email=ERROR: Communication event must have a from contact mech that is an email for comm event Id
+commeventservices.communication_event_to_contact_mech_must_be_email=ERROR: Communication event must have a to contact mech that is an email for comm event Id
 
 contactmechservices.could_not_create_contact_info_id_generation_failure=ERROR: Could not create contact info (id generation failure).
 contactmechservices.service_createContactMech_not_be_used_for_POSTAL_ADDRESS=This service (createContactMech) should not be used for POSTAL_ADDRESS type ContactMechs, use the createPostalAddress service.
