Added ui and services to manage the new entity AgreementPromoAppl, used to associate the promotions that can be applied against a given purchase agreement.
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@6310 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/accounting/config/AccountingUiLabels.properties
+++ b/applications/accounting/config/AccountingUiLabels.properties
@@ -34,7 +34,9 @@ AccountingAgreement=Agreement
 AccountingAgreementDate=Agreement Date
 AccountingAgreementId=Agreement Id
 AccountingAgreementItemSeqId=Agreement Item Seq Id
+AccountingAgreementItem=Agreement Item
 AccountingAgreementItems=Agreement Items
+AccountingAgreementPromoAppls=Promotions
 AccountingAgreementTerms=Agreement Terms
 AccountingAgreementTermId=Agreement Term Id
 AccountingAgreementTypeId=Agreement Type Id
@@ -158,6 +160,7 @@ AccountingNetIncome=Net Income
 AccountingNewAccount=New Account
 AccountingNewAgreement=Create Agreement
 AccountingNewAgreementItem=Create Agreement Item
+AccountingNewAgreementPromoAppl=Add New Promotion
 AccountingNewAgreementTerm=Create Agreement Term
 AccountingNewFixedAsset=New Fixed Asset
 AccountingNewFixedAssetStdCost=New Standard Cost
