Screens and structure for the marketing campaign reports are here.  We just need the layout and the BSH script functionality
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@6316 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/marketing/config/MarketingUiLabels.properties
+++ b/applications/marketing/config/MarketingUiLabels.properties
@@ -38,6 +38,7 @@ MarketingManagerApplication=Marketing Manager Application
 MarketingParentCampaignId=Parent Campaign Id
 MarketingViewPermissionError=View Permission Error
 
+
 PageTitleAddContactList=Add Contact List
 PageTitleAddMarketingCampaign=Add New Marketing Campaign
 PageTitleAddTrackingCode=Add New Tracking Code
@@ -67,7 +68,6 @@ PageTitleListSegmentGroupClass=List Segment Group Classifications
 PageTitleListSegmentGroupGeo=List Segment Group Geos
 PageTitleListContactListCommEvent=List Contact List Comm Events
 PageTitleListContactList=List Contact List
-PageTitleListContactListCommEvent=List Contact List Comm Events
 PageTitleListContactListParty=List Contact List Parties
 PageTitleListSegmentGroupRole=List Segment Group Roles
 PageTitleListTrackingCode=List Tracking Code
@@ -141,3 +141,12 @@ TrackingCodeVisitSourceEnumId=Source Id
 TrackingCodeVisitVisitId=Visit Id
 TrackingCodeVisitVisitorId=Visitor Id
 TrackingCodeVisitWebappName=Webapp Name
+
+MarketingReports=Reports
+MarketingDateRange=Date Range
+MarketingTrackingCodeReportTitle=Tracking Code Report
+MarketingCampaignReportTitle=Marketing Campaign Report
+MarketingVisits=Visits
+MarketingOrders=Orders
+MarketingOrderAmount=Amount of Orders
+MarketingConversionRate=Conversion Rate
