Implemented ability to manually apply promotions to the shopping cart.
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@6322 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels.properties
+++ b/applications/order/config/OrderUiLabels.properties
@@ -63,6 +63,7 @@ OrderDate = Order Date
 OrderDateOrdered = Date Ordered
 OrderDesiredDeliveryDate = Desired Delivery Date
 OrderDestination = Destination
+OrderDoPromotions=Run Promotions
 OrderEditItems = Edit Items
 OrderEntryDate = Entry Date
 OrderErrorFacilityHaveNoAdress=Error : the facility does not have addresses
@@ -94,6 +95,7 @@ OrderJurisdiction = Jurisdiction
 OrderLookupOrder = Lookup Order(s)
 OrderLookupReturn = Lookup Return(s)
 OrderManagerApplication = Order Manager Application
+OrderManualPromotions=Manual Promotions
 OrderMTD=MTD
 OrderNbr = #
 OrderNewQuantity=New quantity
