--- a/applications/content/build.xml
+++ b/applications/content/build.xml
@@ -43,6 +43,7 @@
     <target name="classpath">
         <path id="local.class.path">
             <fileset dir="${lib.dir}" includes="*.jar"/>
+            <fileset dir="${lib.dir}/uno" includes="*.jar"/>
             <fileset dir="../../base/lib" includes="*.jar"/>
             <fileset dir="../../base/lib/commons" includes="*.jar"/>
             <fileset dir="../../base/lib/scripting" includes="*.jar"/>
