Fixed wokflow typos reported by David Welton; Jira #OFBIZ-629
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@6349 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/base/config/cache.properties
+++ b/base/config/cache.properties
@@ -32,7 +32,7 @@ security.SecurityGroupPermissionCache.expireTime=1800000
 #entitycache.entity-list.default.ProductPriceRule.expireTime=0
 #entitycache.entity-list.default.ProductPriceRule.useSoftReference=true
 
-# Wokflow related cache
+# Workflow related cache
 workflow.processmgr.useSoftReference=true
 workflow.client.useSoftReference=true
 
