--- a/specialized/community/cache.properties
+++ b/specialized/community/cache.properties
@@ -33,7 +33,7 @@ security.SecurityGroupPermissionCache.expireTime=1800000
 #entity.FindByPrimaryKey.default.expireTime=0
 #entity.FindByPrimaryKey.default.useSoftReference=true
 
-# Wokflow related cache
+# Workflow related cache
 workflow.processmgr.useSoftReference=true
 workflow.client.useSoftReference=true
 
