Added two missing labels.
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@6351 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/manufacturing/config/ManufacturingUiLabels.properties
+++ b/applications/manufacturing/config/ManufacturingUiLabels.properties
@@ -121,6 +121,7 @@ ManufacturingQuickRunAllTasks=Quick Run All Tasks
 ManufacturingQuickRunTask=Quick Run Task
 ManufacturingReason=Reason
 ManufacturingApproveRequirements=Approve Requirements
+ManufacturingReports=Reports
 ManufacturingRouting=Routing
 ManufacturingRoutings=Routings
 ManufacturingRoutingHasNoRoutingTask=Routing has no Routing Task
@@ -137,6 +138,7 @@ ManufacturingRoutingTaskId=Routing Task Id
 ManufacturingRoutingTaskToMissing=Routing Task To is Missing
 ManufacturingRunMrp=Run MRP
 ManufacturingScrapFactor=Scrap Factor %
+ManufacturingShipmentPlans=Shipment Plans
 ManufacturingStartDate=Start Date
 ManufacturingStartTime=Start Time
 ManufacturingSummarizedPartBreakdown=Summarized Breakdown
