Two new label maps for printing checks.
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@6353 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/accounting/config/AccountingUiLabels.properties
+++ b/applications/accounting/config/AccountingUiLabels.properties
@@ -200,6 +200,8 @@ AccountingPaymentType=Payment Type
 AccountingPleaseSendPaymentTo=Please Send Payment To:
 AccountingPreference=Organization Accounting Preferences
 AccountingPrefixCard=Prefix on Card
+AccountingPrintAsCheck=Print As Check
+AccountingPrintChecksPermissionError=Security Error: to print checks, you must have the ACCOUNTING_PRINT_CHECKS permission
 AccountingProduct=Product
 AccountingProductId=Product Id
 AccountingReceivePayment=Receive Payment
