two more ui label maps for accounting checks
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@6354 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/accounting/config/AccountingUiLabels.properties
+++ b/applications/accounting/config/AccountingUiLabels.properties
@@ -201,6 +201,7 @@ AccountingPleaseSendPaymentTo=Please Send Payment To:
 AccountingPreference=Organization Accounting Preferences
 AccountingPrefixCard=Prefix on Card
 AccountingPrintAsCheck=Print As Check
+AccountingPrintChecks=Checks to Print
 AccountingPrintChecksPermissionError=Security Error: to print checks, you must have the ACCOUNTING_PRINT_CHECKS permission
 AccountingProduct=Product
 AccountingProductId=Product Id
@@ -211,6 +212,7 @@ AccountingRoleType=Role Type
 AccountingRoleTypeIdFrom=Role Type Id From
 AccountingRoleTypeIdTo=Role Type Id To
 AccountingRoutingNumber=Routing Number
+AccountingSendChecks=Mark Checks Sent
 AccountingSuffixCard=Suffix on Card
 AccountingTaxAuthorities=Tax Authorities
 AccountingTaxAuthority=Tax Authority
