--- a/.classpath
+++ b/.classpath
@@ -75,8 +75,6 @@
 	<classpathentry kind="lib" path="framework/webapp/lib/velocity-1.3.jar"/>
 	<classpathentry kind="lib" path="framework/webapp/lib/MinML2.jar"/>
 	<classpathentry kind="lib" path="framework/webapp/lib/JPublish.jar"/>
-	<classpathentry kind="lib" path="framework/webapp/lib/iTextXML.jar"/>
-	<classpathentry kind="lib" path="framework/webapp/lib/iText.jar"/>
 	<classpathentry kind="lib" path="framework/webapp/lib/fop.jar"/>
 	<classpathentry kind="lib" path="framework/webapp/lib/EdenLib.jar"/>
 	<classpathentry kind="lib" path="framework/webapp/lib/DataVision.jar"/>
@@ -158,5 +156,22 @@
 	<classpathentry kind="lib" path="base/lib/commons/commons-digester-1.7.jar"/>
 	<classpathentry kind="lib" path="framework/webapp/lib/jasperreports-1.0.2-applet.jar"/>
 	<classpathentry kind="lib" path="framework/webapp/lib/jasperreports-1.0.2.jar"/>
+	<classpathentry kind="lib" path="framework/webapp/lib/itext-1.3.6.jar"/>
+	<classpathentry kind="lib" path="base/lib/ant-launcher.jar"/>
+	<classpathentry kind="lib" path="base/lib/ant.jar"/>
+	<classpathentry kind="lib" path="base/lib/commons/commons-lang-2.1.jar"/>
+	<classpathentry kind="lib" path="applications/content/lib/uno/XSLTValidate.jar"/>
+	<classpathentry kind="lib" path="applications/content/lib/uno/XSLTFilter.jar"/>
+	<classpathentry kind="lib" path="applications/content/lib/uno/XMergeBridge.jar"/>
+	<classpathentry kind="lib" path="applications/content/lib/uno/XFlatXml.jar"/>
+	<classpathentry kind="lib" path="applications/content/lib/uno/unoil.jar"/>
+	<classpathentry kind="lib" path="applications/content/lib/uno/ridl.jar"/>
+	<classpathentry kind="lib" path="applications/content/lib/uno/officebean.jar"/>
+	<classpathentry kind="lib" path="applications/content/lib/uno/jut.jar"/>
+	<classpathentry kind="lib" path="applications/content/lib/uno/jurt.jar"/>
+	<classpathentry kind="lib" path="applications/content/lib/uno/juh.jar"/>
+	<classpathentry kind="lib" path="applications/content/lib/uno/java_uno.jar"/>
+	<classpathentry kind="lib" path="applications/content/lib/uno/java_uno_accessbridge.jar"/>
+	<classpathentry kind="lib" path="applications/content/lib/uno/htmlsoff.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
