added code for party attribute creation/update
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@6377 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/party/config/PartyUiLabels.properties
+++ b/applications/party/config/PartyUiLabels.properties
@@ -58,6 +58,7 @@ PageTitleEditCreditCard=Edit Credit Card
 PageTitleEditEftAccount=Edit EFT Account
 PageTitleEditGiftCard=Edit Gift Card
 PageTitleEditGroupInformation=Edit Group Information
+PageTitleEditPartyAttribute=Edit Party Attribute
 PageTitleEditPartyClassificationGroup=Edit Party Classification Group
 PageTitleEditPartyClassificationGroupParties=Edit Classification Group Parties
 PageTitleEditPartyRates=Edit Party Rates
@@ -114,6 +115,8 @@ PartyAddUserLoginToSecurityGroup=Add UserLogin to Security Group
 PartyAvsString=AVS String
 PartyAreaCode=Area Code
 PartyAttentionName=Attention Name
+PartyAttribute=Party Attribute
+PartyAttributes=Party Attribute(s)
 PartyBank=Bank
 PartyBirthDate=Birth Date
 PartyBirthDateMissingError=Birthdate is not formatted correctly: must be yyyy-mm-dd, like 1982-07-21
@@ -161,6 +164,7 @@ PartyCookie=Cookie
 PartyCountryCode=Country Code
 PartyCountryMissing=Country is missing
 PartyCreateAddWebSiteRolePermissionError=Security Error\: to run addWebSiteRole you must have the PARTYMGR_CREATE or PARTYMGR_ADMIN permission
+PartyCreateAttributePermissionError=Security Error\: to run createPartyAttribute you must have the PARTYMGR_CREATE or PARTYMGR_ADMIN permission
 PartyCreateCommunicationEventPermissionError=Security Error\: to run createCommunicationEvent you must have the PARTYMGR_CREATE or PARTYMGR_ADMIN permission
 PartyCreateCommunicationEventPurposePermissionError=Security Error\: to run createCommunicationEventPurpose you must have the PARTYMGR_CREATE or PARTYMGR_ADMIN permission
 PartyCreateCommunicationEventRolePermissionError=Security Error\: to run createCommunicationEventRole you must have the PARTYMGR_CREATE or PARTYMGR_ADMIN permission
@@ -328,6 +332,7 @@ PartyQuantity=Quantity
 PartyQuantityPurchased=Quantity Purchased
 PartyQuickAddList=Quick Add To Shopping List
 PartyRelationships=Relationships
+PartyRemoveAttributePermissionError=Security Error\: to run createPartyAttribute you must have the PARTYMGR_DELETE or PARTYMGR_ADMIN permission
 PartyRemoveCommunicationEventPurposePermissionError=Security Error\: to run removeCommunicationEventPurpose you must have the PARTYMGR_DELETE or PARTYMGR_ADMIN permission
 PartyRemoveCommunicationEventRolePermissionError=Security Error\: to run removeCommunicationEventRole you must have the PARTYMGR_DELETE or PARTYMGR_ADMIN permission
 PartyRemovePartyClassificationGroupPermissionError=Security Error\: to run deletePartyClassificationGroup you must have the PARTYMGR_DELETE or PARTYMGR_ADMIN permission
@@ -386,6 +391,7 @@ PartyToName=To Name
 PartyTotal=Total
 PartyTotalYearsWorkNotValidNumber=Total Years Work Experience is not a valid number
 PartyType=Type
+PartyUpdateAttributePermissionError=Security Error\: to run updatePartyAttribute you must have the PARTYMGR_UPDATE or PARTYMGR_ADMIN permission
 PartyUpdateCommunicationEventPermissionError=Security Error\: to run updateCommunicationEvent you must have the PARTYMGR_UPDATE or PARTYMGR_ADMIN permission
 PartyUpdatePartyClassificationGroupPermissionError=Security Error\: to run updatePartyClassificationGroup you must have the PARTYMGR_UPDATE or PARTYMGR_ADMIN permission
 PartyUpdatePartyClassificationPermissionError=Security Error\: to run updatePartyClassification you must have the PARTYMGR_UPDATE or PARTYMGR_ADMIN permission
