--- a/specialized/opentravelsystem/webapp/hotelbackend/WEB-INF/web.xml
+++ b/specialized/opentravelsystem/webapp/hotelbackend/WEB-INF/web.xml
@@ -60,7 +60,7 @@
         </init-param>
         <init-param>
             <param-name>allowedPaths</param-name>
-            <param-value>/control:/select:/index.html:/index.jsp:/default.html:/default.jsp:/images:/tinymce:/hotelbackendimages</param-value>
+            <param-value>/control:/select:/index.html:/index.jsp:/default.html:/default.jsp:/images:/tinymce:/hotelbackendimages:/html</param-value>
         </init-param>
         <init-param>
             <param-name>errorCode</param-name>
