Implemented screen to display Production Run's dependecies.
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@6388 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/manufacturing/config/ManufacturingUiLabels.properties
+++ b/applications/manufacturing/config/ManufacturingUiLabels.properties
@@ -32,6 +32,7 @@ ManufacturingCreateCalendar=Create calendar
 ManufacturingCreateCalendarWeek=Create Calendar Week
 ManufacturingCreateMachineGroup=Create a Fixed Asset group
 ManufacturingCreateProductionRun=Create a Production Run
+ManufacturingDependentWorkEfforts=Dependent Production Runs
 ManufacturingEditCalendarExceptionDayFor=Edit Calendar Exception day for
 ManufacturingEditCalendarExceptionWeekFor=Edit Calendar Exception week for
 ManufacturingEditCalendarWeek=Edit Week
@@ -83,6 +84,7 @@ ManufacturingMachinePermissionError=Security Error\: to work on Fixed Asset you 
 ManufacturingMainPage=Manufacturing Manager Main Page
 ManufacturingMainPageNote=NOTE\: This application is currently in development. This page will change.
 ManufacturingManagerApplication=Manufacturing Manager Application
+ManufacturingMandatoryWorkEfforts=Mandatory Production Runs
 ManufacturingManufacturingRules=Manufacturing Rules
 ManufacturingMrp=MRP
 ManufacturingMrpInitialisation=IEP init.
@@ -101,6 +103,7 @@ ManufacturingProductComponentOf=This Product is a Component of
 ManufacturingProductFacilityTableNotExist=ProductFacility table does not exist
 ManufacturingProductTableNotExist=The product Table does not exist
 ManufacturingProductHasNoBom=Product has no Bill of material 
+ManufacturingProductionRunAssocs=Assocs
 ManufacturingProductionRunCreated=ProductionRun ${productionRunId} created
 ManufacturingProductionRunDeclaration=Production Run Declaration
 ManufacturingProductionRunId=Production Run ID
@@ -131,7 +134,7 @@ ManufacturingRoutingName=Routing Name
 ManufacturingRoutingSeqIdFormatNotCorrect=The Routing Seq Id format is not correct
 ManufacturingRoutingSeqIdMissing=Routing SeqId is Missing
 ManufacturingRoutingTask=Routing Task
-ManufacturingRoutingTasks=Manufacturing Routing Tasks
+ManufacturingRoutingTasks=Routing Tasks
 ManufacturingRoutingTaskAssocCreateSuccessfully=Routing Task association creation successfull
 ManufacturingRoutingTaskCopiedSuccessfully=Routing Task copied Successfully
 ManufacturingRoutingTaskId=Routing Task Id
