--- a/applications/order/config/OrderUiLabels.properties
+++ b/applications/order/config/OrderUiLabels.properties
@@ -379,3 +379,22 @@ OrderSendConfirmationEmailSendTo=Send To
 OrderSendConfirmationEmailCCTo=CC To
 OrderSendConfirmationEmailSubject=Subject
 OrderSendConfirmationEmailNote=Note
+
+# ========================================
+# org.ofbiz.order.order messages
+# ========================================
+
+items.none=ERROR: There are no items to order
+
+# 0=productId
+product.not_found=Could not find the product with ID [{0}], cannot be purchased.
+fixed_asset_product_not_found=Could not find a related rental fixed asset for the product with ID [{0}], cannot be rented.
+
+# 0=productName, 1=productId
+product.not_yet_for_sale=Tried to order the Product {0} (productId: {1}). This product has not yet been made available for sale. Please remove from your order.
+
+# 0=productName, 1=productId
+product.no_longer_for_sale=Tried to order the Product {0} (productId: {1}). This product is no longer available for sale. Please remove from your order.
+
+# 0=productName, 1=productId
+product.out_of_stock=The product {0} with ID {1} is no longer in stock. Please try reducing the quantity or removing the product from this order.
