Integration of new RBS WorldPay Select Junior and support of new Payment Gateway Config entity (OFBIZ-2498)
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@777203 13f79535-47bb-0310-9956-ffa450edef68

--- a/applications/accounting/config/payment.properties
+++ b/applications/accounting/config/payment.properties
@@ -218,6 +218,8 @@ payment.verisign.stackTraceOn=N
 ############################################
 # WorldPay Select Pro Configuration
 ############################################
+# Redirect URL
+payment.worldpay.redirectUrl=https://select-test.worldpay.com/wcc/purchase
 
 # Worldpay instance Id
 payment.worldpay.instId=[WorldPay InstID]
@@ -231,14 +233,20 @@ payment.worldpay.fixContact=N
 # HideContact - Will hide the contact info completely
 payment.worldpay.hideContact=N
 
+# HideCurrency - this causes the currency drop down to be no hidden, so fixing the currency that the shopper must value purchase in
+payment.worldpay.hideCurrency=N
+
+# langId - The shopper's language choice, as a 2-character ISO 639 code, with optional regionalisation using 2-character country code separated by hyphen
+payment.worldpay.langId=
+
+# noLanguageMenu - This suppresses the display of the language menu if noLanguageMenu no you have a choice of languages enabled for your value installation
+payment.worldpay.noLanguageMenu=N
+
+# withDelivery - Displays input fields for delivery address and withDelivery no mandate that they be filled in
+payment.worldpay.withDelivery=N
+
 # TestMode (100: approve / 101: cancelled / 0: Live Mode (no test)
 payment.worldpay.testMode=100
-
-# Timeout length - The amount of time to wait for payment in milliseconds (0 for worldpay default timeout)
-payment.worldpay.timeout=1800000
-
-# Thank-You / Confirm Order Template (rendered via Freemarker)
-payment.worldpay.confirmTemplate=/order/emailconfirmation.ftl
 
 ############################################
 # PayPal Configuration
