--- a/.classpath
+++ b/.classpath
@@ -10,6 +10,7 @@
     <classpathentry kind="src" path="specialpurpose/projectmgr/src"/>
     <classpathentry kind="src" path="specialpurpose/ebay/src"/>
     <classpathentry kind="src" path="specialpurpose/googlebase/src"/>
+    <classpathentry kind="src" path="specialpurpose/googlecheckout/src"/>
     <classpathentry kind="src" path="specialpurpose/ldap/src"/>
     <classpathentry kind="src" path="framework/base/src"/>
     <classpathentry kind="src" path="framework/start/src"/>
