PayFlow has changed their Host names : test-payflow.verisign.com --> pilot-payflowpro.paypal.com (Test) payflow.verisign.com      --> payflowpro.paypal.com       (Production)
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@779774 13f79535-47bb-0310-9956-ffa450edef68

--- a/applications/accounting/config/payment.properties
+++ b/applications/accounting/config/payment.properties
@@ -188,7 +188,7 @@ payment.valuelink.publicValue=
 payment.verisign.certsPath=${sys:getProperty('ofbiz.home')}/applications/accounting/pfcerts
 
 # Address and port of the payment processor
-payment.verisign.hostAddress=test-payflow.verisign.com
+payment.verisign.hostAddress=pilot-payflowpro.paypal.com
 payment.verisign.hostPort=443
 
 # Account information
