Anymore BSH scripts but Groovy (while struggling with something that seems related to cache in POS, still investigating, really weird...)
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@822532 13f79535-47bb-0310-9956-ffa450edef68

--- a/framework/base/config/cache.properties
+++ b/framework/base/config/cache.properties
@@ -62,7 +62,7 @@ product.content.rendered.useSoftReference=true
 product.config.expireTime=60000
 product.config.useSoftReference=true
 
-# Development Mode - comment these out to better cache BSH scripts, etc
+# Development Mode - comment these out to better cache groovy scripts, etc
 #These are all cleared by default every 10000 milliseconds, or ten seconds
 minilang.SimpleMethodsDirect.expireTime=10000
 minilang.SimpleMethodsResource.expireTime=10000
