--- a/framework/guiapp/config/xui.properties
+++ b/framework/guiapp/config/xui.properties
@@ -21,4 +21,4 @@
 isSameLogin=false
 # to force a language despite the default locale. Useful to test with another language for instance...
 # However to force the PosUiLabels.xml side you still need to use something like "-Duser.language=en" on the command line
-languageSuffix=en
+#languageSuffix=en
