A patch from Erwan de FERRIERES "generate a html report when running ant run-tests" (https://issues.apache.org/jira/browse/OFBIZ-3040) - OFBIZ-3040 When you run the "ant run-tests" command, junit is generating xml files, which are not always easily readable. There is a function with junitreport which allow to generate html reports from the xml ones. Then it is more user friendly to watch them.
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@826428 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -401,6 +401,13 @@ under the License.
             <jvmarg value="${memory.maxpermsize.param}"/>
             <arg value="test"/>
         </java>
+        <mkdir dir="runtime/logs/test-results/html"/>
+        <junitreport todir="runtime/logs/test-results">
+            <fileset dir="runtime/logs/test-results/">
+                <include name="*.xml"/>
+            </fileset>
+            <report format="frames" todir="runtime/logs/test-results/html"/>
+        </junitreport>
     </target>
     <target name="_save-runtime-data">
         <delete file="runtime/data.zip"/>
